--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.28.0
-opencv-python==4.9.0.80
-mediapipe==0.10.21
-numpy==1.24.4
-pandas==2.1.1
-plotly==5.17.0
-pillow==10.0.1
-matplotlib==3.8.0
-streamlit-webrtc==0.47.0
-av==10.0.0
-scikit-learn==1.3.0
-tensorflow==2.12.0
+streamlit>=1.25.0,<1.29.0
+opencv-python>=4.7.0,<4.9.0
+mediapipe>=0.10.5,<0.11.0
+numpy>=1.24.0,<1.27.0
+pandas>=2.0.0,<2.2.0
+plotly>=5.15.0,<5.18.0
+pillow>=9.5.0,<10.1.0
+matplotlib>=3.7.0,<3.9.0
+streamlit-webrtc>=0.45.0,<0.48.0
+av>=10.0.0,<11.0.0
+scikit-learn>=1.2.0,<1.4.0
+tensorflow>=2.12.0,<2.13.0
